refactor: DTOs are now longer called XyzDTO
