# src/main/kotlin/org/openklips/server/dto/EnrollmentDtoAssembler.kt
@@ -1,8 +1,6 @@
 package org.openklips.server.dto
 
 import org.openklips.server.config.OpenKlipsServerConfig
-import org.openklips.server.model.Enrollment
-import org.openklips.server.model.dto.EnrollmentDto
 import org.slf4j.Logger
 import org.slf4j.LoggerFactory
 import org.springframework.stereotype.Component
@@ -10,13 +8,13 @@ import java.time.LocalDate
 import java.util.*
 
 @Component
-class EnrollmentDtoAssembler : DtoAssembler<Enrollment, EnrollmentDto> {
+class EnrollmentDtoAssembler : DtoAssembler<org.openklips.server.model.Enrollment, org.openklips.server.model.dto.Enrollment> {
 
     private val log: Logger = LoggerFactory.getLogger(EnrollmentDtoAssembler::class.java)
 
-    override fun assemble(source: Enrollment): EnrollmentDto {
+    override fun assemble(source: org.openklips.server.model.Enrollment): org.openklips.server.model.dto.Enrollment {
         log.debug("Creating DTO for enrollment: $source")
-        val enrollmentDto = EnrollmentDto()
+        val enrollmentDto = org.openklips.server.model.dto.Enrollment()
         enrollmentDto.id = source.id
         enrollmentDto.startDate = toLocalDate(source.startDate)
         // TODO: ...
