# src/main/kotlin/org/openklips/server/dto/RoleDtoAssembler.kt
@@ -1,16 +1,14 @@
 package org.openklips.server.dto
 
 import org.openklips.server.model.Instructor
-import org.openklips.server.model.Role
 import org.openklips.server.model.Student
-import org.openklips.server.model.dto.RoleDto
 import org.openklips.server.model.dto.RoleType
 import org.springframework.stereotype.Component
 
 @Component
-class RoleDtoAssembler : DtoAssembler<Role, RoleDto> {
+class RoleDtoAssembler : DtoAssembler<org.openklips.server.model.Role, org.openklips.server.model.dto.Role> {
 
-    override fun assemble(source: Role): RoleDto {
+    override fun assemble(source: org.openklips.server.model.Role): org.openklips.server.model.dto.Role {
         computeRoleType(source).fold({ t ->
             return assembleRoleVariant(t, source)
         }, { e ->
@@ -18,7 +16,7 @@ class RoleDtoAssembler : DtoAssembler<Role, RoleDto> {
         })
     }
 
-    private fun computeRoleType(role: Role): Result<RoleType> {
+    private fun computeRoleType(role: org.openklips.server.model.Role): Result<RoleType> {
         return when (role) {
             is Instructor -> Result.success(RoleType.INSTRUCTOR)
             is Student -> Result.success(RoleType.STUDENT)
@@ -26,8 +24,8 @@ class RoleDtoAssembler : DtoAssembler<Role, RoleDto> {
         }
     }
 
-    private fun assembleRoleVariant(roleType: RoleType, source: Role): RoleDto {
-        val roleDto = RoleDto()
+    private fun assembleRoleVariant(roleType: RoleType, source: org.openklips.server.model.Role): org.openklips.server.model.dto.Role {
+        val roleDto = org.openklips.server.model.dto.Role()
         roleDto.id = when (roleType) {
             RoleType.INSTRUCTOR -> source.id
             RoleType.STUDENT -> {
@@ -46,12 +44,12 @@ class RoleDtoAssembler : DtoAssembler<Role, RoleDto> {
         }
     }
 
-    private fun assembleStudent(source: Student, studentDto: RoleDto): RoleDto {
+    private fun assembleStudent(source: Student, studentDto: org.openklips.server.model.dto.Role): org.openklips.server.model.dto.Role {
         studentDto.roleType = RoleType.STUDENT
         return studentDto
     }
 
-    private fun assembleInstructor(source: Instructor, instructorDto: RoleDto): RoleDto {
+    private fun assembleInstructor(source: Instructor, instructorDto: org.openklips.server.model.dto.Role): org.openklips.server.model.dto.Role {
         instructorDto.roleType = RoleType.INSTRUCTOR
         return instructorDto
     }
