# src/main/kotlin/org/openklips/server/dto/StudentDtoAssembler.kt
@@ -1,22 +1,19 @@
 package org.openklips.server.dto
 
-import org.openklips.server.model.Student
-import org.openklips.server.model.dto.EnrollmentDto
-import org.openklips.server.model.dto.StudentDto
 import org.springframework.stereotype.Component
 
 @Component
 class StudentDtoAssembler(
         private val enrollmentDtoAssembler: EnrollmentDtoAssembler
-) : DtoAssembler<Student, StudentDto> {
+) : DtoAssembler<org.openklips.server.model.Student, org.openklips.server.model.dto.Student> {
 
-    override fun assemble(source: Student): StudentDto {
-        val enrollmentDtos: List<EnrollmentDto> = source
+    override fun assemble(source: org.openklips.server.model.Student): org.openklips.server.model.dto.Student {
+        val enrollmentDtos: List<org.openklips.server.model.dto.Enrollment> = source
                 .enrollments
                 .map { enrollmentDtoAssembler.assemble(it) }
                 .toList()
 
-        val studentDto = StudentDto()
+        val studentDto = org.openklips.server.model.dto.Student()
         studentDto.id = source.studentId
         studentDto.enrollments = enrollmentDtos
 
